[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu/shipyard/LabeledField.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menu/passenger/PassengerMenu.gd" type="Script" id=2]

[node name="PassengerMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.25989
margin_top = -2.51984
margin_right = -1.25989
margin_bottom = -2.51978
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 14.0
text = "Click a passenger group to select it."

[node name="PassengerCapacityField" parent="." instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 1920.0
margin_bottom = 32.0
field_name = "Passenger Spaces"

[node name="WaitingPassengerGroupHolder" type="VBoxContainer" parent="."]
margin_top = 36.0
margin_right = 1920.0
margin_bottom = 36.0

[node name="Spacer" type="Label" parent="."]
margin_top = 40.0
margin_right = 1920.0
margin_bottom = 54.0

[node name="ButtonHolder" type="HBoxContainer" parent="."]
margin_top = 58.0
margin_right = 1920.0
margin_bottom = 78.0
custom_constants/separation = 10

[node name="Load1Button" type="Button" parent="ButtonHolder"]
margin_right = 54.0
margin_bottom = 20.0
disabled = true
text = "Load 1"

[node name="Load10Button" type="Button" parent="ButtonHolder"]
margin_left = 64.0
margin_right = 126.0
margin_bottom = 20.0
disabled = true
text = "Load 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadAllButton" type="Button" parent="ButtonHolder"]
margin_left = 136.0
margin_right = 199.0
margin_bottom = 20.0
disabled = true
text = "Load All"
